source/index.styl
// Hide buttons until they are loaded
.likely {
  opacity: 0;
  transition: opacity .1s ease-in;

  * {
    visibility: hidden;
  }

  &_ready {
    opacity: 1;

    * {
      visibility: inherit;
    }
  }
}

.likely {
  display: inline-block;
  font-size: 0 !important;
  font-weight: normal;
  font-family: Helvetica Neue, Arial, sans-serif;
  text-indent: 0 !important;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;

  * {
    display: inline-block;
  }

  &__widget {
    position: relative;
    white-space: nowrap;
  }

  &__button,
  &__counter {
    text-decoration: none;
    text-rendering: optimizeLegibility;
    margin: 0;
    outline: 0;
  }

  &__button {
    position: relative;
    cursor: pointer;
    user-select: none;
    color: inherit;
  }

  &__counter {
    display: none;
    position: relative;
  }

  &_ready &__counter {
    display: inline-block;
  }

  &_ready &__counter_empty {
    display: none;
  }

  &__widget,
  &__icon,
  &__button,
  &__counter {
    vertical-align: top;
  }

  &__widget {
    transition: widget-transition = background .33s ease-out, color .33s ease-out, fill .33s ease-out;

    &:hover, &:active, &:focus {
      transition: none;
      cursor: pointer;

      @media (hover: none) {
        transition: widget-transition;
        cursor: unset;
      }
    }
  }

  &__icon {
    position: relative;
    text-align: left;
  }

  svg {
    position: absolute;
  }

  &__button,
  &__counter {
    line-height: inherit;
    cursor: inherit;
  }

  &__button:empty {
    display: none;
  }

  &__counter {
    text-align: center;
  }
}

/* Style options */
likely-background = rgba(231,231,231,.8);
likely-light-background = rgba(236,236,236,.16);
likely-light-box-shadow = rgba(0,0,0,.2) 0 0 .33em;

/* Mixins */
likely-light-widget() {
  color: #fff;
  fill: #fff;
  background: likely-light-background;
  text-shadow: likely-light-box-shadow;
}

likely-light-counter() {
  background-image: linear-gradient(to right, rgba(255,255,255,.4) 0, rgba(255,255,255,0) .5px, rgba(255,255,255,0) 100%)
}

likely-light-button(button, color) {
  .likely__widget_{button} {
    &:hover, &:active, &:focus {
      text-shadow: color 0 0 .25em;
      background: alpha(color, 0.7);
    }
  }
}

likely-light-media-none-button(button, color) {
  .likely__widget_{button} {
    &:hover, &:active, &:focus {
      text-shadow: likely-light-box-shadow;
      background: likely-light-background;
    }
  }
}

.likely {
  .likely__widget {
    color: #000;
    background: likely-background;
  }
  .likely__counter {
    background-size: 1px 1px;
    background-repeat: repeat-y;
    background-image: linear-gradient(to right, rgba(0,0,0,.2) 0, rgba(0,0,0,0) .5px, rgba(0,0,0,0) 100%)
  }
}
.likely-light, .likely-dark-theme {
  .likely__widget {
    likely-light-widget()
  }
  .likely__counter {
    likely-light-counter()
  }
}

@media (prefers-color-scheme: dark) {
  .likely-color-theme-based {
    .likely__widget {
      likely-light-widget()
    }
    .likely__counter {
      likely-light-counter()
    }
  }
}

colorize(button, color) {
  .likely__widget_{button} {
    fill: color;
    &:hover, &:active, &:focus {
      background: alpha(mix(#fff,color,75%),.8);

      @media (hover: none) {
        background: likely-background;
      }
    }
  }
  .likely-light, .likely-dark-theme {
    likely-light-button(button, color)

    @media (hover: none) {
      likely-light-media-none-button(button, color)
    }
  }
  @media (prefers-color-scheme: dark) {
    .likely-color-theme-based {
      likely-light-button(button, color)
    }
  }
  @media (prefers-color-scheme: dark) and (hover: none) {
    .likely-color-theme-based {
      likely-light-media-none-button(button, color)
    }
  }
}

colorize('facebook', #1877F2);
colorize('linkedin', #0a66c2);
colorize('odnoklassniki', #EE8208);
colorize('pinterest', #E60019);
colorize('reddit', #ff4501);
colorize('telegram', #35a3dc);
colorize('twitter', #1da1f2);
colorize('viber', #7360f2);
colorize('vkontakte', #0077FF);
colorize('whatsapp', #25D366);



/* Size options */

.likely {
  margin: 0 -5px -10px;
  .likely__widget {
    line-height: 20px;
    font-size: 14px;
    border-radius: 3px;
    height: 22px;
    margin: 0 5px 10px;
  }
  .likely__icon {
    width: 22px; height: 22px;
  }
  .likely__button {
    padding: 1px 4px 1px 0;
  }
  .likely__counter {
    padding: 1px 4px;
  }
  svg {
    left: 3px;
    top: 3px;
    width: 16px;
    height: 16px;
  }
}

.likely-big {
  margin: 0 -6px -12px;
  .likely__widget {
    line-height: 28px;
    font-size: 18px;
    border-radius: 4px;
    height: 32px;
    margin: 0 6px 12px;
  }
  .likely__icon {
    width: 32px; height: 32px;
  }
  .likely__button {
    padding: 2px 6px 2px 0;
  }
  .likely__counter {
    padding: 2px 6px;
  }
  svg {
    left: 4px;
    top: 4px;
    width: 24px;
    height: 24px;
  }
}

.likely-small {
  margin: 0 -4px -8px;
  .likely__widget {
    line-height: 14px;
    font-size: 12px;
    border-radius: 2px;
    height: 18px;
    margin: 0 4px 8px;
  }
  .likely__icon {
    width: 18px; height: 18px;
  }
  .likely__button {
    padding: 2px 3px 2px 0;
  }
  .likely__counter {
    padding: 2px 3px;
  }
  svg {
    left: 3px;
    top: 3px;
    width: 12px;
    height: 12px;
  }
}

